--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 -------------------- */
 
 :root {
-  --theme-color: #00a0a0;
+  --theme-color: #ffa500;
 }
 
 * {
@@ -18,7 +18,7 @@ html, body {
 body {
   margin: 0;
   padding: 30px;
-  color: #ffa500;
+  color: 333;
 }
 
 /* --------------------
